# musepipe

./: .pre-commit-config.yaml  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ubuntu-py-ci.yml
musepipe/: hand.py  musepipe.py
musepipe/facemesh/: __init__.py  camera.py  image.py
musepipe/hand/: camera.py  image.py
tests/: mp_hand_test.py
