[tool.poetry]
name = "musepipe"
version = "0.0.1"
description = "Mediapipe based tool for experiment mediapipe features"
authors = ["Onuralp SEZER <thunderbirdtr@gmail.com>"]
maintainers = ["Onuralp SEZER <thunderbirdtr@gmail.com>"]
readme = "README.md"
packages = [{include = "musepipe"}]
homepage = "https://github.com/onuralpszr/MusePipe"
repository = "https://github.com/onuralpszr/MusePipe"
documentation = "https://github.com/onuralpszr/MusePipe/blob/main/README.md"
keywords = ["mediapipe","musepipe","linux","jupyter notebook","fastapi","gradio"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: X11 Applications",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Operating System :: OS Independent",
]


[tool.poetry.dependencies]
python = ">=3.8,<4.0"
numpy = "1.24.1"
pillow = "9.3.0"
opencv-python = "4.6.0.66"
tqdm = "^4.64.1"
click = "^8.1.3"
mediapipe = "^0.9.0.1"
fastapi = "^0.88.0"
uvicorn = "^0.20.0"
gunicorn = "^20.1.0"
gradio = "^3.15.0"
jupyterlab = "^3.5.2"
ipywidgets = "^8.0.4"
importlib-metadata = "^6.0.0"

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
mypy = "^0.991"
bandit = "^1.7.4"
debugpy = "^1.6.4"
rope = "^1.6.0"
wheel = "^0.38.4"
setuptools = "^65.6.3"
coverage = "^7.0.1"
pre-commit = "^2.21.0"
pyupgrade = "^3.3.1"
types-requests = "^2.28.11.7"
ruff = "^0.0.203"


[tool.pytest.ini_options]
addopts = "--black --isort --flake8"
flake8-max-line-length = 79

[tool.isort]
line_length = 79
profile = "black"

[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
musepipe = "musepipe.musepipe:main"
