[tool.poetry]
name = "musepipe"
version = "0.0.1"
description = "Mediapipe based tool for experiment mediapipe features"
authors = ["Onuralp SEZER <thunderbirdtr@gmail.com>"]
maintainers = ["Onuralp SEZER <thunderbirdtr@gmail.com>"]
readme = "README.md"
packages = [{include = "musepipe"}]
homepage = "https://github.com/onuralpszr/MusePipe"
repository = "https://github.com/onuralpszr/MusePipe"
documentation = "https://github.com/onuralpszr/MusePipe/blob/main/README.md"
keywords = ["mediapipe","musepipe","linux","jupyter notebook","fastapi","gradio"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: X11 Applications",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Operating System :: OS Independent",
]


[tool.poetry.dependencies]
python = ">=3.8.1,<4.0"
numpy = "1.24.1"
pillow = "9.3.0"
opencv-python = "4.6.0.66"
tqdm = "^4.64.1"
click = "^8.1.3"
mediapipe = "^0.9.1.0"
fastapi = "^0.90.1"
uvicorn = "^0.20.0"
gunicorn = "^20.1.0"
gradio = "^3.19.1"
jupyterlab = "^3.6.1"
ipywidgets = "^8.0.4"
importlib-metadata = "^6.0.0"
typer = "^0.7.0"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
mypy = "^1.0.1"
bandit = "^1.7.4"
debugpy = "^1.6.6"
rope = "^1.7.0"
wheel = "^0.38.4"
setuptools = "^67.4.0"
coverage = "^7.2.1"
pre-commit = "^3.1.1"
pyupgrade = "^3.3.1"
types-requests = "^2.28.11.15"
ruff = "^0.0.244"
pytest = "^7.2.1"
toml = "^0.10.2"
flake8 = "^6.0.0"
isort = "^5.12.0"


[tool.pytest.ini_options]
addopts = "--isort"

[tool.isort]
line_length = 79
profile = "black"

[tool.bandit]
target = ["tests", "musepipe"]
tests = ["B201", "B301"]

[tool.autoflake]
check = true
imports = ["cv2", "requests", "mediapipe"]


[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
musepipe = "musepipe.musepipe:app"
